Chin Perera : game logic extracted to sperate file

--- a/src/game.html
+++ b/src/game.html
@@ -14,14 +14,14 @@
 <![endif]-->
 <body>
 <div class="l-wrapper">
-    <div id="container" class="l-main-container">
-        <button id="rock">
+    <div id="container" class="l-main-container l-game">
+        <button id="Rock">
             Rock
         </button>
-        <button id="paper">
+        <button id="Paper">
             Paper
         </button>
-        <button id="scissors">
+        <button id="Scissors">
             Scissors
         </button>
         <div id="msgHeading"></div>
@@ -30,6 +30,7 @@
 </div>
 </body>
 <script src="//cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.3/modernizr.js"></script>
+<script src="js/Executor.js"></script>
 <script src="js/GameEngine.js"></script>
 
 <script>
