--- a/src/index.html
+++ b/src/index.html
@@ -14,15 +14,17 @@
 <![endif]-->
 <body>
     <div class="l-wrapper">
-        <div id="container" class="l-main-container">
+        <div id="container" class="l-main-container l-intro">
             <p class="c-bigger-text">
                 Hello All, Let's play a game called Rocks, papers and scissors!
             </p>
-            <button id="playnow"> Let's play </button>
+            <button id="plyvComp">Play vs Computer </button>
+            <button id="compvComp">Computer vs Computer </button>
         </div>
     </div>
 </body>
 <script src="//cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.3/modernizr.js"></script>
+<script src="js/Executor.js"></script>
 <script src="js/GameEngine.js"></script>
 <script src="js/Actions.js"></script>
 
