--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,7 @@
 </head>
 <link type="text/css" href="css/styles.css" rel="stylesheet" media="all" />
 <link href='https://fonts.googleapis.com/css?family=Arvo' rel='stylesheet' type='text/css'>
+<link href='https://fonts.googleapis.com/css?family=Roboto:400,700,500' rel="stylesheet" type="text/css">
 <!--[if (gte IE 6)&(lte IE 8)]>
 <link type="text/css" href="css/ie.css" rel="stylesheet" media="all" />
 <![endif]-->
@@ -16,15 +17,16 @@
     <div class="l-wrapper">
         <div id="container" class="l-main-container l-intro">
             <p class="c-bigger-text">
-                Hello All, Let's play a game called Rocks, papers and scissors!
+              Bored.. Try your luck on Rock, Paper or Scissors.. It is a lot more fun than you think!
             </p>
-            <button id="plyvComp">Play vs Computer </button>
-            <button id="compvComp">Computer vs Computer </button>
+            <div class="l-intro-btn-container">
+              <button id="plyvComp" class="std-btn blue">Play vs Computer </button>
+              <button id="compvComp" class="std-btn blue">Watch how pros do it!</button>
+            </div>
         </div>
     </div>
 </body>
 <script src="//cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.3/modernizr.js"></script>
-<script src="js/Executor.js"></script>
 <script src="js/GameEngine.js"></script>
 <script src="js/Actions.js"></script>
 
