Chin Perera : CSS

--- a/src/game.html
+++ b/src/game.html
@@ -16,18 +16,20 @@
 <div class="l-wrapper">
     <div id="container" class="l-main-container l-game">
       <div id="btnContainer" class="l-btn-container js-visibility-toggle">
-        <p>
+        <p class="c-bigger-text">
           Pick your choice and wait for computer to decide!
         </p>
-        <button id="Rock">
-          Rock
-        </button>
-        <button id="Paper">
-          Paper
-        </button>
-        <button id="Scissors">
-          Scissors
-        </button>
+        <div class="l-game-buttons">          
+          <button id="Rock"  class="std-btn blue">
+            Rock
+          </button>
+          <button id="Paper" class="std-btn blue">
+            Paper
+          </button>
+          <button id="Scissors" class="std-btn blue">
+            Scissors
+          </button>
+        </div>
       </div>
       <div id="msgHeading"></div>
       <div id="cpuResult"></div>
