Chin Perera : Game engine

--- a/src/game.html
+++ b/src/game.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+  <!DOCTYPE html>
 <!--[if IE 8]>         <html class="no-js lt-ie8"> <![endif]-->
 <!--[if IE 9]>         <html class="no-js lt-ie9"> <![endif]-->
 <!--[if gt IE 9]><!--> <html class="no-js"> <!--<![endif]-->
@@ -16,10 +16,10 @@
 <div class="l-wrapper">
     <div id="container" class="l-main-container l-game">
       <div id="btnContainer" class="l-btn-container js-visibility-toggle">
-        <p class="c-bigger-text">
+        <p class="c-bigger-text c-center">
           Pick your choice and wait for computer to decide!
         </p>
-        <div class="l-game-buttons">          
+        <div class="l-game-buttons">
           <button id="Rock"  class="std-btn blue">
             Rock
           </button>
@@ -31,8 +31,10 @@
           </button>
         </div>
       </div>
-      <div id="msgHeading"></div>
-      <div id="cpuResult"></div>
+      <div class="l-results-container">
+          <p id="cpuResult"></p>
+          <p id="msgHeading"></p>
+      </div>
     </div>
 </div>
 </body>
