Chin Perera : Added QUnit

--- a/src/game.html
+++ b/src/game.html
@@ -32,8 +32,8 @@
         </div>
       </div>
       <div class="l-results-container">
-          <p id="cpuResult"></p>
-          <p id="msgHeading"></p>
+          <p id="resultContainer"></p>
+          <p id="msgContainer"></p>
       </div>
     </div>
 </div>
