Chin Perera : created CSS

--- a/src/game.html
+++ b/src/game.html
@@ -13,11 +13,19 @@
 <link type="text/css" href="css/ie.css" rel="stylesheet" media="all" />
 <![endif]-->
 <body>
+  <header class="l-header">
+      <nav>
+        <ul>
+          <li><a href="index.html">New Game</a></li>
+        </ul>
+      </nav>
+  </header>
 <div class="l-wrapper">
     <div id="container" class="l-main-container l-game">
+
       <div id="btnContainer" class="l-btn-container js-visibility-toggle">
         <p class="c-bigger-text c-center">
-          Pick your choice and wait for computer to decide!
+          Pick your choice and try your luck!
         </p>
         <div class="l-game-buttons">
           <button id="Rock"  class="std-btn blue">
