--- a/src/index.html
+++ b/src/index.html
@@ -20,8 +20,8 @@
               Bored.. Try your luck on Rock, Paper or Scissors.. It is a lot more fun than you think!
             </p>
             <div class="l-intro-btn-container">
-              <button id="plyvComp" class="std-btn blue">Play vs Computer </button>
-              <button id="compvComp" class="std-btn blue">Watch how pros do it!</button>
+              <button id="plyvComp" class="std-btn blue --with-margin">Play vs Computer </button>
+              <button id="compvComp" class="std-btn blue --with-margin">Watch how pros do it!</button>
             </div>
         </div>
     </div>
