--- a/tests/index.html
+++ b/tests/index.html
@@ -10,5 +10,6 @@
   <div id="qunit"></div>
   <div id="qunit-fixture"></div>
   <script src="//code.jquery.com/qunit/qunit-1.22.0.js"></script>
+  <script src="js/test.js"></script>
 </body>
 </html>
