--- a/src/game.html
+++ b/src/game.html
@@ -22,12 +22,21 @@
   </header>
 <div class="l-wrapper">
     <div id="container" class="l-main-container l-game">
-
       <div id="btnContainer" class="l-btn-container js-visibility-toggle">
         <p class="c-bigger-text c-center">
           Pick your choice and try your luck!
         </p>
-        <div class="l-game-buttons">
+        <div class="l-top-container">
+          <div class="l-score-boxes l-fl">
+            <p>Computer</p>
+            <p id="computerScore"></p>
+          </div>
+          <div class="l-score-boxes l-fr">
+            <p>Player</p>
+            <p id="userScore"></p>
+          </div>
+        </div>
+        <div class="l-game-buttons clearfix">
           <button id="Rock"  class="std-btn blue">
             Rock
           </button>
@@ -39,7 +48,7 @@
           </button>
         </div>
       </div>
-      <div class="l-results-container">
+      <div class="l-full-width-container --result">
           <p id="resultContainer"></p>
           <p id="msgContainer"></p>
       </div>
@@ -50,7 +59,6 @@
 <script src="js/Helpers.js"></script>
 <script src="js/GameEngine.js"></script>
 <script src="js/Executor.js"></script>
-
 <script>
     var path = "http://browser-update.org/update-browser.html",
             target = "_blank",
